welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:9: error: not found: value estDevantMur
    if (!estDevantMur) {avance(4)}
         ^PatternPicture:10: error: Unit does not take parameters
    else(){recule(4)}
          ^